--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,16 @@
+*{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}.item-row{
+  border-bottom: 1px solid #f2f2f2;
+}
 h1, p {
   font-family: Lato;
 }
 h1{
 text-align: center;}
-.cart-box, .footer{
-  background-color: rgb(212, 86, 111);
-  color: white;
+.footer{
+  background-color: #f2f2f2;
+  color: rgb(0,0,8);
   font-weight: 400;
   padding: 2px;
   font-size: 16px;
@@ -15,23 +20,27 @@ text-align: center;}
   padding-left: 2%;
 }
 .cart-box{
-  margin: 10px auto;
+  margin: 10px 10px;
   width: 300px;
   padding: 0.9em !important;
-  font-weight: 500 !important;
-  font-size: 18px !important;
+  font-weight: 400 !important;
+  font-size: 16px !important;
+  height: auto;
 
 }
 .tshirt-box{
+  display: inline-block;
   width: 560px;
-  /* border: 1pz solid grey !important; */
-  background-color: rgb(236, 234, 234);
-  border-top: 2px solid cornflowerblue;
-  margin: 10px auto;
+  border: 1px solid #f2f2f2 !important;
+  /* background-color: rgb(236, 234, 234); */
+  border-bottom: 1px solid grey;
+  margin: 10px 10px;
   padding: 1px 1px 1px 5px;
   text-transform: capitalize;
 }
-
+.t-list{
+text-align: center;
+}
 .btn {
   display: inline-block;
   padding: 0.35em 1.3em;
@@ -47,4 +56,12 @@ text-align: center;}
   }
   .btn:hover{
   background-color:#4095c6;
+  }
+  nav{
+    background-color: #f2f2f2;
+  }
+  nav ul li{
+    display: inline-block;
+    font-size: 18px;
+    padding: 0px 5px 0px 5px;
   }
