--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,5 @@
 *{
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-}.item-row{
-  border-bottom: 1px solid #f2f2f2;
 }
 h1, p {
   font-family: Lato;
@@ -62,6 +60,39 @@ text-align: center;
   }
   nav ul li{
     display: inline-block;
+
+  }
+  nav ul li a{
     font-size: 18px;
     padding: 0px 5px 0px 5px;
+    color: #7D7D7D;
+    text-transform: uppercase;
+    line-height: 15px;
+    font-family: "Lato", sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+
+  }
+  .logo{
+    width: 150;
+    height: auto;
+  }
+  .header-div{
+    display: inline-block;
+  }
+  .header, .header h1{
+    text-align: center;
+    vertical-align: middle;
+  }
+  .item-row{
+    border: 2px solid #f2f2f2;
+  }
+  .product{
+    color: #B2BAC4;
+  }
+  .item-row td{
+    padding: 11px 22px 11px 22px;
+  }
+  thead{
+    border-bottom: 3px solid grey;
   }
